FIXED Issue #642- BUGFIX - : Slide menu type with auto scrollbar.

--- a/crux-smart-faces/src/main/resources/org/cruxframework/crux/smartfaces/client/backbone/common/facesBackboneMenuCommon.css
+++ b/crux-smart-faces/src/main/resources/org/cruxframework/crux/smartfaces/client/backbone/common/facesBackboneMenuCommon.css
@@ -298,7 +298,7 @@
     -webkit-transform:translateX(100%);
     -moz-transform:translateX(100%);
 	transform:translateX(100%);
-	
+	overflow-y: auto;
 	position:absolute;
     top:0;
     left:0;
